[tool.poetry]
name = "uniunihan-db"
version = "0.1.0"
description = "Han character database"
authors = ["Nathan Glenn <garfieldnate@gmail.com>"]
keywords = [
    "unihan", "linguistics", "sinoxenic", "Chinese", "Mandarin", "Cantonese",
    "Japanese", "Korean", "Vietnamese", "kanji", "hanzi", "hanja", "han tu", "hantu"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.10.1"
flake8 = "^3.8.4"
mypy = "^0.790"
black = "^20.8b1"
isort = "^5.6.4"
pre-commit = "^2.7.1"
unihan-etl = "^0.11.0"
requests = "^2.24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths="test"

[tool.poetry.scripts]
build-db = "uniunihan_db.build_db:main"
# test = "pre-commit run --all-files"

[tool.isort]
multi_line_output=3
include_trailing_comma=true
force_grid_wrap=0
use_parentheses=true
line_length=88

[tool.coverage.run]
source = "uniunihan_db"

[tool.coverage.report]
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",

    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:"
]
