[tool.poetry]
name = "uniunihan-db"
version = "0.1.0"
description = "Han character database"
authors = ["Nathan Glenn <garfieldnate@gmail.com>"]
keywords = [
    "unihan", "linguistics", "sinoxenic", "Chinese", "Mandarin", "Cantonese",
    "Japanese", "Korean", "Vietnamese", "kanji", "hanzi", "hanja", "han tu", "hantu"]

[tool.poetry.dependencies]
python = "^3.9"
importlib-metadata = {version = "^1.0", python = "<3.8"}
Jinja2 = "^3.0.1"
commentjson = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.0"
pytest-cov = "^2.10.1"
flake8 = "^3.8.4"
mypy = "^0.790"
black = "^20.8b1"
isort = "^5.6.4"
pre-commit = "^2.7.1"
unihan-etl = "^0.11.0"
requests = "^2.24.0"
jaconv = "^0.2.4"

[build-system]
# setuptools required because of bug in distutils: https://github.com/python-poetry/poetry/issues/3153
requires = ["setuptools","poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.poetry.scripts]
pipeline = "uniunihan_db.pipeline.runner:main"
collate = "uniunihan_db.collate:collate"
build-book = "uniunihan_db.build_book:build_book"
# test = "pre-commit run --all-files"

[tool.isort]
# black-compatible settings
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.coverage.run]
source = ["uniunihan_db"]

[tool.coverage.report]
# TODO: require certain level of test coverage
# fail_under = 100
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",

    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:"
]
